# PyDesign

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY.md  mypy-gui.ini  pyproject.toml
.github/workflows/: ci.yml  mypy-diagnostic.yml
docs/: implementation_status.md  modularity_assessment.md  pdf_foundation.md  source_transactions.md  typography_foundation.md
docs/adr/: 0000-template.md  0001-visible-python-is-authored-truth.md  0002-native-procedural-authoring.md
docs/design/: 00_decision_register.md  01_product_scope_and_workflows.md  02_project_format_and_python_authoring.md  03_document_model_geometry_and_commands.md  04_typography_and_text_layout.md  05_graphics_images_colour_and_assets.md  06_desktop_ui_canvas_and_accessibility.md  07_rendering_pdf_export_and_proofing.md  08_runtime_build_graph_security_and_recovery.md  09_extensions_cli_packaging_and_licensing.md  10_quality_performance_and_acceptance.md  11_implementation_sequence.md  12_procedural_generation_and_data.md  13_library_integration_and_interchange.md  README.md  requirements_traceability.md
docs/roadmap/: README.md  backlog.toml  current_focus.md  definition_of_ready_done.md  milestones.md  workstreams.md
examples/hello_editorial/: README.md  document.py  project.toml
examples/hello_editorial/pages/: __init__.py  cover.py  principles.py
examples/magazine_32/: document.py  project.toml
examples/typography_corpus/: document.py  project.toml
examples/typography_corpus/goldens/: ltr_hello.json  mixed_hello_arabic.json  rtl_arabic.json
scripts/: check_architecture.py  check_perf_budgets.py  check_roadmap.py
src/pydesign/: __init__.py  __main__.py  cli.py  colour.py  components.py  context.py  diagnostics.py  layout.py  model.py  styles.py  units.py  validation.py
src/pydesign/extensions/: __init__.py
tests/: __init__.py  test_evaluation_cache.py  test_gui_smoke.py  test_model_and_layout.py  test_pdf_export.py  test_project.py  test_project_files.py  test_property_rewrite.py  test_recovery.py  test_source_rewrite.py  test_transaction_journal.py  test_typography.py  test_typography_corpus.py  test_units.py  test_worker_and_cli.py
(+75 files in other folders)
