[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pydesign"
version = "0.1.0.dev0"
description = "Offline Python-native editorial layout studio"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MPL-2.0" }
authors = [{ name = "PyDesign contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics",
]
dependencies = ["libcst>=1.6,<2"]

[project.optional-dependencies]
gui = ["PySide6>=6.8,<7"]
typography = [
  "fonttools>=4.59,<5",
  "freetype-py>=2.5,<3",
  "pyphen>=0.17,<1",
  "uharfbuzz>=0.51,<1",
]
unicode = ["PyICU>=2.15,<3"]
pdf = [
  "pikepdf>=10,<11",
  "reportlab>=4.4,<5",
]
dev = [
  "build>=1.2",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6",
  "ruff>=0.9",
]

[project.scripts]
pydesign = "pydesign.cli:main"

[project.urls]
Homepage = "https://github.com/Cyrusublerman/PyDesign"
Documentation = "https://github.com/Cyrusublerman/PyDesign/tree/main/docs/design"
Issues = "https://github.com/Cyrusublerman/PyDesign/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pydesign"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["INP001"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["pydesign"]

[[tool.mypy.overrides]]
module = ["pydesign.gui.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["PIL.*", "fontTools.*", "freetype", "icu", "pikepdf", "reportlab.*", "uharfbuzz"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
